[package]
name = "byte-aes"
version = "0.2.1"
edition = "2021"
description = "byte-aes is a simple wrapper around the popular aes crate. The goal is to perform Encrypt and Decrypt operations using the Advanced Encryption Standard 256 bit Algorithm conveninent to use instead of use Low level functions of the aes crate"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "^0.8.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3